Editorial review of entire doc ahead of 2.5 EA

--- a/downstream/assemblies/platform/assembly-installing-hub-operator.adoc
+++ b/downstream/assemblies/platform/assembly-installing-hub-operator.adoc
@@ -27,15 +27,16 @@ When an instance of {HubName} is removed, the PVCs are not automatically deleted
 
 == Prerequisites
 
-* You have installed the {PlatformName} operator in Operator Hub.
+* You have installed the {OperatorPlatform} in Operator Hub.
 
-== Installing the {HubName} operator
-Use this procedure to install the {HubName} operator.
+// commenting out below as encouraging users to use platform gateway for installation, only covering configuration here [gmurray]
+// == Installing the {HubName} operator
+// Use this procedure to install the {HubName} operator.
 
-.Procedure
+// .Procedure
 
-. Navigate to menu:Operators[Installed Operators].
-. Locate the *Automation hub* entry, then click btn:[Create instance].
+// . Navigate to menu:Operators[Installed Operators].
+// . Locate the *Automation hub* entry, then click btn:[Create instance].
 
 include::platform/con-storage-options-for-operator-installation-on-ocp.adoc[leveloffset=+2]
 include::platform/proc-provision-ocp-storage-with-readwritemany.adoc[leveloffset=+3]
