--- a/downstream/assemblies/platform/assembly-operator-add-execution-nodes.adoc
+++ b/downstream/assemblies/platform/assembly-operator-add-execution-nodes.adoc
@@ -6,7 +6,7 @@ ifdef::context[:parent-context: {context}]
 
 :context: operator-upgrade
 
-You can enable the {PlatformNameShort} Operator with execution nodes by downloading and installing the install bundle.  
+You can enable the {OperatorPlatform} with execution nodes by downloading and installing the install bundle.  
 
 
 include::platform/proc-add-operator-execution-nodes.adoc[leveloffset=+1]
