--- a/downstream/assemblies/platform/assembly-using-rhsso-operator-with-automation-hub.adoc
+++ b/downstream/assemblies/platform/assembly-using-rhsso-operator-with-automation-hub.adoc
@@ -9,7 +9,7 @@ ifdef::context[:parent-context: {context}]
 {PrivateHubNameStart} uses {RHSSO} for authentication.
 
 The {OperatorRHSSO} creates and manages resources.
-Use this Operator to create custom resources to automate {RHSSO} administration in Openshift.
+Use this operator to create custom resources to automate {RHSSO} administration in OpenShift.
 
 * When installing {PlatformNameShort} on _Virtual Machines_ (VMs) the installer can automatically install and configure {RHSSO} for use with {PrivateHubName}.
 
