--- a/downstream/modules/platform/proc-add-operator-execution-nodes.adoc
+++ b/downstream/modules/platform/proc-add-operator-execution-nodes.adoc
@@ -1,9 +1,9 @@
 [id="add-operator-execution-nodes_{context}"]
 
 .Prerequisites
-* An {ControllerName} instance
-* The receptor collection package is installed
-* The `ansible-runner` package is installed
+* An {ControllerName} instance.
+* The receptor collection package is installed.
+* The `ansible-runner` package is installed.
 
 .Procedure
 . Log in to {PlatformName}.
