--- a/downstream/modules/platform/proc-create-keycloak-client.adoc
+++ b/downstream/modules/platform/proc-create-keycloak-client.adoc
@@ -141,6 +141,6 @@ spec:
 
 . Click btn:[Create] and wait for the process to complete.
 
-When {HubName} is deployed, you must update the client with the “Valid Redirect URIs” and “Web Origins” as described in xref:proc-update-rhsso-client_{context}[Updating the {RHSSO} client]
+After you deploy {HubName}, you must update the client with the “Valid Redirect URIs” and “Web Origins” as described in xref:proc-update-rhsso-client_{context}[Updating the {RHSSO} client]
 Additionally, the client comes pre-configured with token mappers, however, if your authentication provider does not provide group data to Red Hat SSO, then the group mapping must be updated to reflect how that information is passed.
 This is commonly by user attribute.
