--- a/downstream/modules/platform/proc-create-keycloak-instance.adoc
+++ b/downstream/modules/platform/proc-create-keycloak-instance.adoc
@@ -2,7 +2,7 @@
 
 = Creating a Keycloak instance
 
-When the {OperatorRHSSO} is installed you can create a Keycloak instance for use with {PlatformNameShort}.
+After you install the {OperatorRHSSO}, you can create a Keycloak instance for use with {PlatformNameShort}.
 
 From here you provide an external Postgres or one will be created for you.
 
