--- a/downstream/modules/platform/proc-hub-ingress-options.adoc
+++ b/downstream/modules/platform/proc-hub-ingress-options.adoc
@@ -1,8 +1,8 @@
 [id="proc-hub-ingress-options_{context}"]
 
-= Configuring the Ingress type for your {HubName} operator
+= Configuring the ingress type for your {HubName} operator
 
-The {PlatformName} operator installation form allows you to further configure your {HubName} operator Ingress under *Advanced configuration*.
+The {OperatorPlatform} installation form allows you to further configure your {HubName} operator ingress under *Advanced configuration*.
 
 .Procedure
 
