--- a/downstream/modules/platform/proc-install-aap-operator.adoc
+++ b/downstream/modules/platform/proc-install-aap-operator.adoc
@@ -3,7 +3,7 @@
 .Procedure
 . Log in to {OCP}.
 . Navigate to menu:Operators[OperatorHub].
-. Search for the {PlatformName} operator and click btn:[Install].
+. Search for {PlatformNameShort} and click btn:[Install].
 . Select an *Update Channel*:
 +
 * *stable-2.x*: installs a namespace-scoped operator, which limits deployments of {HubName} and {ControllerName} instances to the namespace the operator is installed in. This is suitable for most cases. The stable-2.x channel does not require administrator privileges and utilizes fewer resources because it only monitors a single namespace.
