--- a/downstream/modules/platform/proc-install-cli-aap-operator.adoc
+++ b/downstream/modules/platform/proc-install-cli-aap-operator.adoc
@@ -10,7 +10,7 @@ Use this procedure to subscribe a namespace to an operator.
 
 .Procedure
 
-. Create a project for the operator
+. Create a project for the operator.
 +
 -----
 oc new-project ansible-automation-platform
