--- a/downstream/modules/platform/proc-installing-hub-using-operator.adoc
+++ b/downstream/modules/platform/proc-installing-hub-using-operator.adoc
@@ -1,8 +1,8 @@
 [id="proc-installing-hub-using-operator_{context}"]
 
-= Installing {HubName} using the Operator
+= Installing {HubName} using the {OperatorPlatform}
 
-Use the following procedure to install {HubName} using the operator.
+Use the following procedure to install {HubName} using the {OperatorPlatform}.
 
 .Procedure
 
