--- a/downstream/modules/platform/proc-operator-access-aap.adoc
+++ b/downstream/modules/platform/proc-operator-access-aap.adoc
@@ -10,7 +10,7 @@ To access your *AnsibleAutomationPlatform* instance:
 
 . Navigate to menu:Networking[Routes]
 . Click the link under *Location* for *AnsibleAutomationPlatform*.
-. This redirects you to the *AnsibleAutomationPlatform* login page. Enter your username in the *Username* field.
+. This redirects you to the {PlatformNameShort} login page. Enter "admin" as your username in the *Username* field.
 . For the password you need to:
 .. Go to to menu:Workloads[Secrets].
 .. Click btn:[<your instance name>-admin-password] and copy the password. 
