--- a/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
+++ b/downstream/assemblies/platform/assembly-configure-aap-operator.adoc
@@ -16,6 +16,8 @@ The platform gateway for {PlatformNameShort} enables you to manage the following
 Before you can deploy the platform gateway you must have {OperatorPlatform} installed in a namespace. 
 If you have not installed {OperatorPlatform} see <<Installing the Red Hat Ansible Automation Platform operator on Red Hat OpenShift Container Platform>>.
 
+NOTE: Platform gateway is only available under {OperatorPlatform} version 2.5. Every component deployed under {OperatorPlatform} 2.5 will also default to version 2.5.
+
 If you have the {OperatorPlatform} and some or all of the {PlatformNameShort} components installed see <<Deploying the platform gateway with existing {PlatformNameShort} components>> for how to proceed. 
 
 include::platform/proc-operator-link-components.adoc[leveloffset=+1]
