--- a/downstream/modules/platform/con-ocp-supported-install.adoc
+++ b/downstream/modules/platform/con-ocp-supported-install.adoc
@@ -5,7 +5,7 @@
 
 You can use the OperatorHub on the {OCP} web console to install {OperatorPlatform}.
 
-Alternatively, you can install {OperatorPlatform} from the {OCPShort} command-line interface (CLI), `oc`.
+Alternatively, you can install {OperatorPlatform} from the {OCPShort} command-line interface (CLI), `oc`. See <<installing-aap-operator-cli>> for help with this. 
 
 After you have installed {OperatorPlatform} you must create an *AnsibleAutomationPlatform* custom resource (CR). This allows you to manage {PlatformNameShort} components from a single unified interface known as the platform gateway. As of version 2.5, you must create an {PlatformNameShort} CR, even if you have an existing {ControllerName},  {HubName}, or {EDAName}, components.
 
