--- a/downstream/modules/platform/proc-update-rhsso-client.adoc
+++ b/downstream/modules/platform/proc-update-rhsso-client.adoc
@@ -2,7 +2,7 @@
 
 = Updating the {RHSSO} client
 
-When {HubName} is installed and you know the URL of the instance, you must update the {RHSSO} to set the Valid Redirect URIs and Web Origins settings.
+After you install {HubName} and you know the URL of the instance, you must update the {RHSSO} to set the Valid Redirect URIs and Web Origins settings.
 
 .Procedure
 
