--- a/downstream/assemblies/hub/assembly-managing-collections-hub.adoc
+++ b/downstream/assemblies/hub/assembly-managing-collections-hub.adoc
@@ -6,7 +6,7 @@ ifdef::context[:parent-context: {context}]
 :context: managing-collections-hub
 
 [role="_abstract"]
-As a content creator, you can use namespaces in {HubName} to curate and manage collections for the following purposes:
+As a content creator, you can use namespaces in {HubName} to curate and manage collections. For example, you can:
 
 * Create groups with permissions to curate namespaces and upload collections to {PrivateHubName}
 * Add information and resources to the namespace to help end users of the collection in their automation tasks
