--- a/downstream/assemblies/hub/assembly-working-with-namespaces.adoc
+++ b/downstream/assemblies/hub/assembly-working-with-namespaces.adoc
@@ -7,8 +7,8 @@ Namespaces are unique locations in {HubName} to which you can upload and publish
 You can use namespaces in {HubName} to organize collections developed within your organization for internal distribution and use.
 
 If you are working with namespaces, you must have a group that has permissions to create, edit and upload collections to namespaces. Collections uploaded to a namespace require administrative approval before you can publish them and make them available for use.
-
-include::hub/proc-create-content-developers.adoc[leveloffset=+1]
+// Create content developers procedure will need to be replaced with new access management procedure. -Hala 
+// include::hub/proc-create-content-developers.adoc[leveloffset=+1]
 
 include::hub/proc-create-namespace.adoc[leveloffset=+1]
 
