--- a/downstream/modules/hub/proc-create-content-developers.adoc
+++ b/downstream/modules/hub/proc-create-content-developers.adoc
@@ -2,17 +2,17 @@
 
 = Creating a new group for content curators
 
-You can create a new group in {PrivateHubName} designed to support content curation in your organization. This group can contribute internally developed collections for publication in {PrivateHubName}.
+You can create a new group in {PlatformNameShort} designed to support content curation in your organization. This group can contribute internally-developed collections for publication in {PrivateHubName}.
 
 To help content developers create a namespace and upload their internally developed collections to {PrivateHubName}, you must first create and edit a group and assign the required permissions.
 
 .Prerequisites
 
-* You have administrative permissions in {PrivateHubName} and can create groups.
+* You have administrative permissions in {PlatformNameShort} and can create groups.
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {PrivateHubName}.
+. Log in to your {PlatformNameShort}.
 . From the navigation panel, select {MenuHubGroups} and click btn:[Create].
 . Enter *Content Engineering* as a *Name* for the group in the modal and click btn:[Create]. You have created the new group and the *Groups* page opens.
 . On the *Permissions* tab, click btn:[Edit].
