--- a/downstream/modules/hub/proc-create-namespace.adoc
+++ b/downstream/modules/hub/proc-create-namespace.adoc
@@ -11,10 +11,10 @@ When creating a namespace, you can assign a group in {HubName} as owners of that
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {PrivateHubName}.
+. Log in to your {PlatformNameShort}.
 . From the navigation panel, select {MenuACNamespaces}.
 . Click btn:[Create] and enter a *namespace name*.
-. Assign a group of *Namespace owners*.
-. Click btn:[Create].
+. In the *Access* tab, click the btn:[Select a group] to assign a group of *Namespace owners* to the namespace.
+. Click btn:[Add].
 
 Your content developers can now upload collections to your new namespace and allow users in groups assigned as owners to upload collections.
