AAP-25787: Updated connectivity requirement for VS code

--- a/lightspeed/modules/con_lightspeed-process.adoc
+++ b/lightspeed/modules/con_lightspeed-process.adoc
@@ -20,11 +20,9 @@ To use an on-premise deployment of {LightspeedShortName}, your organization must
 * An installation of {ibmwatsonxcodeassistant} for {LightspeedshortName} on Cloud Pak for Data
 
 == Connectivity requirements
-To generate code recommendations, the Ansible Lightspeed service in Visual Studio (VS) Code editor requires access to the following outbound domains:
+To generate code recommendations, the Ansible Lightspeed service in Visual Studio (VS) Code editor requires access to the following outbound domain:
 
 * https://c.ai.ansible.redhat.com
-* https://console.redhat.com
-* https://access.redhat.com
 
 The outbound connections are encrypted on TCP protocol port 443.
 
