further attribute and UI updates

--- a/downstream/modules/hub/proc-delete-namespace.adoc
+++ b/downstream/modules/hub/proc-delete-namespace.adoc
@@ -5,7 +5,7 @@
 = Deleting a namespace
 
 You can delete unwanted namespaces to manage storage on your {HubName} server.
-You must first ensure that the namespace does not contain a collection with dependencies.
+You must first ensure that the namespace you want to delete does not contain a collection with dependencies.
 
 .Prerequisites
 * The namespace you are deleting does not have a collection with dependencies.
@@ -13,7 +13,7 @@ You must first ensure that the namespace does not contain a collection with depe
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {PrivateHubName}.
+. Log in to your {PlatformNameShort}.
 . From the navigation panel, select {MenuACNamespaces}.
 . Click the namespace to be deleted.
 . Click the btn:[More Actions] icon *{MoreActionsIcon}*, then click btn:[Delete namespace].
