--- a/downstream/modules/hub/proc-review-collection-imports.adoc
+++ b/downstream/modules/hub/proc-review-collection-imports.adoc
@@ -15,10 +15,10 @@ Import log:: activities executed during the collection import
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to your {PrivateHubName}.
+. Log in to your {PlatformNameShort}.
 . From the navigation panel, select {MenuACNamespaces}.
 . Select a namespace.
-. Click the btn:[More Actions] icon *{MoreActionsIcon}* and select *My imports*.
+. Click the btn:[More Actions] icon *{MoreActionsIcon}* and select *Imports*.
 . Use the search field or locate an imported collection from the list.
 . Click the imported collection.
 . Review collection import details to determine the status of the collection in your namespace.
