attribute and UI updates

--- a/downstream/modules/hub/proc-create-repository.adoc
+++ b/downstream/modules/hub/proc-create-repository.adoc
@@ -9,7 +9,7 @@ When you use {PlatformName} to create a repository, you can configure the reposi
 
 .Procedure
 //[ddacosta] For 2.5 this will be Log in to Ansible Automation Platform and select Automation Content. Automation hub opens in a new tab. From the navigation ...
-. Log in to {HubName}.
+. Log in to {PlatformNameShort}.
 . From the navigation panel, select {MenuACAdminRepositories}.
 . Click btn:[Add repository].
 . Enter a *Repository name*.
