--- a/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
@@ -1,7 +1,7 @@
 [id="aap-platform-gateway-restore_{context}"]
 
-= Recovering your AnsibleAutomationPlatform deployment
-*AnsibleAutomationPlatform* manages any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you recover *AnsibleAutomationPlatform* you also restore these components.
+= Recovering your Ansible Automation Platform deployment
+*Ansible Automation Platform* manages any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you recover *Ansible Automation Platform* you also restore these components.
 
 In previous versions of the {OperatorPlatform}, it was necessary to create a restore object for each component of the platform. 
 Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  creates and manages the other restore objects: 
