--- a/downstream/modules/platform/proc-operator-aap-faq.adoc
+++ b/downstream/modules/platform/proc-operator-aap-faq.adoc
@@ -10,7 +10,7 @@ You can follow along in the command line while the operator is reconciling, this
 Alternatively you can click into the deployment instance to see the status conditions being updated as the deployment goes on.
 
 Is it still possible to view individual component logs?::
-When troubleshooting you should examine the *AnsibleAutomationPlatform* instance for the main logs and then each individual component (*EDA*, *AutomationHub*, *AutomationController*) for more specific information. 
+When troubleshooting you should examine the *Ansible Automation Platform* instance for the main logs and then each individual component (*EDA*, *AutomationHub*, *AutomationController*) for more specific information. 
 
 Where can I view the condition of an instance?::
 To display status conditions click into the instance, and look under the *Details* or *Events* tab.
