AAP-27695 Add Ansible plug-in for RHDH Installation doc

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -114,6 +114,7 @@
 :ToolsName: Ansible developer tools
 :AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
 :RHDH: Red Hat Developer Hub
+:RHDHShort: RHDH
 :Builder: Ansible Builder
 :Navigator: automation content navigator
 :NavigatorStart: Automation content navigator
