--- a/downstream/titles/aap-plugin-rhdh-install/master.adoc
+++ b/downstream/titles/aap-plugin-rhdh-install/master.adoc
@@ -16,8 +16,15 @@ This document has been updated to include information for the latest release of 
 
 include::{Boilerplate}[]
 
+[IMPORTANT]
+==== 
+{AAPRHDH} is a Technology Preview feature only.
+include::snippets/technology-preview.adoc[]
+==== 
+
 include::devtools/assembly-rhdh-intro.adoc[leveloffset=+1]
-include::devtools/assembly-rhdh-planning.adoc[leveloffset=+1]
-include::devtools/assembly-rhdh-install.adoc[leveloffset=+1]
-include::devtools/assembly-rhdh-upgrading-uninstalling.adoc[leveloffset=+1]
+// include::devtools/assembly-rhdh-planning.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-install-ocp.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-upgrade-ocp.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-uninstall-ocp.adoc[leveloffset=+1]
 include::devtools/assembly-rhdh-configure.adoc[leveloffset=+1]
