--- a/downstream/assemblies/devtools/assembly-rhdh-configure.adoc
+++ b/downstream/assemblies/devtools/assembly-rhdh-configure.adoc
@@ -6,9 +6,14 @@ ifdef::context[:parent-context: {context}]
 :context: rhdh-configure
 [role="_abstract"]
 
-{AAPRHDH} Configuration
-
-//include::devtools/ref-devtools-components.adoc[leveloffset=+1]
+include::devtools/proc-rhdh-enable-rhdh-authentication.adoc[leveloffset=+1]
+include::devtools/proc-rhdh-configure-rbac.adoc[leveloffset=+1]
+//
+include::devtools/proc-rhdh-configure-optional-integrations.adoc[leveloffset=+1]
+include::devtools/proc-rhdh-configure-devspaces.adoc[leveloffset=+2]
+include::devtools/proc-rhdh-configure-pah-url.adoc[leveloffset=+2]
+//
+include::devtools/proc-rhdh-configure-telemetry.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
