--- a/downstream/assemblies/devtools/assembly-rhdh-intro.adoc
+++ b/downstream/assemblies/devtools/assembly-rhdh-intro.adoc
@@ -6,9 +6,10 @@ ifdef::context[:parent-context: {context}]
 :context: rhdh-intro
 [role="_abstract"]
 
-{AAPRHDH} introduction placeholder
-
-//include::devtools/ref-devtools-components.adoc[leveloffset=+1]
+include::devtools/ref-rhdh-about-rhdh.adoc[leveloffset=+1]
+include::devtools/ref-rhdh-about-plugins.adoc[leveloffset=+1]
+include::devtools/ref-rhdh-architecture.adoc[leveloffset=+1]
+// include::devtools/ref-devtools-components.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
