AAP-25614 Deprecated the former topic on setting up controller tokens for now

--- a/downstream/titles/eda/eda-user-guide/master.adoc
+++ b/downstream/titles/eda/eda-user-guide/master.adoc
@@ -16,7 +16,7 @@ include::eda/assembly-eda-user-guide-overview.adoc[leveloffset=+1]
 include::eda/assembly-eda-credentials.adoc[leveloffset=+1]
 include::eda/assembly-eda-projects.adoc[leveloffset=+1]
 include::eda/assembly-eda-decision-environments.adoc[leveloffset=+1]
-include::eda/assembly-eda-set-up-token.adoc[leveloffset=+1]
+//include::eda/assembly-eda-set-up-token.adoc[leveloffset=+1]
 include::eda/assembly-eda-rulebook-activations.adoc[leveloffset=+1]
 include::eda/assembly-eda-rule-audit.adoc[leveloffset=+1]
 include::eda/assembly-eda-performance-tuning.adoc[leveloffset=+1]
