AAP-25614 Updated overview; remove previous controller token topic and added performance tuning

--- a/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
+++ b/downstream/assemblies/eda/assembly-eda-user-guide-overview.adoc
@@ -10,8 +10,9 @@ The following procedures form the user configuration:
 * xref:eda-set-up-credential[Setting up credentials]
 * xref:eda-set-up-new-project[Setting up a new project]
 * xref:eda-set-up-new-decision-environment[Setting up a new decision environment]
-* xref:eda-set-up-token[Setting up a token to authenticate to {PlatformNameShort} Controller]
+//* xref:eda-set-up-token[Setting up a token to authenticate to {PlatformNameShort} Controller]
 * xref:eda-set-up-rulebook-activation[Setting up a rulebook activation]
+* xref:eda-performance-tuning[Performance tuning for EDAcontroller]
 
 [NOTE]
 
