AAP-27696 Create Using Ansible Plug-ins guide

--- a/downstream/assemblies/devtools/assembly-rhdh-using.adoc
+++ b/downstream/assemblies/devtools/assembly-rhdh-using.adoc
@@ -1,14 +1,25 @@
 ifdef::context[:parent-context: {context}]
 [id="rhdh-using_{context}"]
 
-= Using {AAPRHDH}
+= Using the Ansible plug-ins
 
 :context: rhdh-using
 [role="_abstract"]
+You can use {AAPRHDH} (RHDH) to learn about Ansible, create automation projects, and access opinionated workflows and tools to develop and test your automation code.
+From the {RHDH} UI, you can navigate to your {PlatformNameShort} instance, where you can configure and run automation jobs. 
 
-Using the plug-in - placeholder
+This document describes how to use the {AAPRHDH}.
+It presents a worked example of developing a playbook project for automating updates to your firewall configuration on RHEL systems.
 
-//include::devtools/ref-devtools-components.adoc[leveloffset=+1]
+include::devtools/ref-rhdh-dashboard.adoc[leveloffset=+1]
+include::devtools/ref-rhdh-learning.adoc[leveloffset=+1]
+include::devtools/ref-rhdh-discover-collections.adoc[leveloffset=+1]
+include::devtools/proc-rhdh-create.adoc[leveloffset=+1]
+include::devtools/proc-rhdh-view.adoc[leveloffset=+1]
+include::devtools/proc-rhdh-develop-projects.adoc[leveloffset=+1]
+include::devtools/proc-rhdh-develop-projects-devspaces.adoc[leveloffset=+2]
+include::devtools/proc-rhdh-execute-automation-devspaces.adoc[leveloffset=+2]
+include::devtools/proc-rhdh-set-up-controller-project.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
