--- a/downstream/titles/aap-plugin-rhdh-using/master.adoc
+++ b/downstream/titles/aap-plugin-rhdh-using/master.adoc
@@ -16,4 +16,12 @@ This document has been updated to include information for the latest release of 
 
 include::{Boilerplate}[]
 
+[IMPORTANT]
+====
+{AAPRHDH} is a Technology Preview feature only.
+include::snippets/technology-preview.adoc[]
+====
+
 include::devtools/assembly-rhdh-using.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-feedback.adoc[leveloffset=+1]
+include::devtools/assembly-rhdh-example.adoc[leveloffset=+1]
