--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -69,3 +69,8 @@ include::topics/installer-24-13.adoc[leveloffset=+3]
 include::topics/installer-24-12.adoc[leveloffset=+3]
 
 include::topics/installer-24-11.adoc[leveloffset=+3]
+
+// Other async releases
+=== Ansible plug-ins for Red Hat Developer Hub
+
+include::topics/ansible-plugins-1.0.0.adoc[leveloffset=+3]
