Editorial review on backup and recovery doc

--- a/downstream/modules/platform/proc-aap-controller-restore.adoc
+++ b/downstream/modules/platform/proc-aap-controller-restore.adoc
@@ -14,8 +14,8 @@ If the backup custom resource being restored is a backup of a currently running 
 
 .Prerequisites
 
-* You must be authenticated with an Openshift cluster.
-* The {ControllerName} has been deployed to the cluster.
+* You must be authenticated with an OpenShift cluster.
+* You have deployed  {ControllerName} on the cluster.
 * An AutomationControllerBackup is available on a PVC in your cluster.
 
 .Procedure
