--- a/downstream/modules/platform/proc-aap-controller-yaml-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-yaml-backup.adoc
@@ -6,10 +6,8 @@ See the following procedure for how to back up a deployment of the {ControllerNa
 
 .Prerequisites
 
-
 * You must be authenticated with an OpenShift cluster.
-
-* The {OperatorPlatform} has been installed to the cluster.
+* You have installed the {OperatorPlatform} on the cluster.
 * The {ControllerName} is deployed to using the {OperatorPlatform}.
 
 .Procedure
