--- a/downstream/modules/platform/proc-aap-hub-backup.adoc
+++ b/downstream/modules/platform/proc-aap-hub-backup.adoc
@@ -7,8 +7,8 @@ Use this procedure to back up a deployment of the hub, including all hosted Ansi
 
 .Prerequisites
 
-* You must be authenticated with an Openshift cluster.
-* The {OperatorPlatform} has been installed to the cluster.
+* You must be authenticated with an OpenShift cluster.
+* You have installed the {OperatorPlatform} on the cluster.
 * The {HubName} is deployed to using the {OperatorPlatform}.
 
 .Procedure
@@ -24,4 +24,4 @@ For example, if your {HubName} must be backed up and the deployment name is `aap
 .. Optionally, enter the name of the *Backup persistent volume claim*, *Backup persistent volume claim namespace*, *Backup PVC storage requirements*, and *Backup PVC storage class*.
 . Click btn:[Create].
 +
-A backup of the specified deployment is created and available for data recovery or deployment rollback.
+This creates a backup of the specified deployment and is available for data recovery or deployment rollback.
