--- a/downstream/modules/platform/proc-aap-hub-restore.adoc
+++ b/downstream/modules/platform/proc-aap-hub-restore.adoc
@@ -12,8 +12,8 @@ The name specified for the new AutomationHub custom resource must not match an e
 
 .Prerequisites
 
-* You must be authenticated with an Openshift cluster.
-* The {HubName} has been deployed to the cluster.
+* You must be authenticated with an OpenShift cluster.
+* You have deploed {HubName} on the cluster.
 * An AutomationHubBackup is available on a PVC in your cluster.
 
 .Procedure
@@ -27,4 +27,4 @@ The name specified for the new AutomationHub custom resource must not match an e
 . Enter the *Backup Name* of the AutomationHubBackup object.
 . Click btn:[Create].
 +
-A new deployment is created and your backup is restored to it.
+This creates a new deployment and your backup is restored to it.
