--- a/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
@@ -4,8 +4,8 @@
 Regularly backing up your *AnsibleAutomationPlatform* deployment is vital to protect against unexpected data loss and application errors. *AnsibleAutomationPlatform* hosts any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you back up *AnsibleAutomationPlatform* the operator will also back up these components.
 
 .Prerequisites
-* You must be authenticated on Openshift cluster.
-* The {OperatorPlatform} has been installed on the cluster.
+* You must be authenticated on OpenShift cluster.
+* You have installed the {OperatorPlatform} on the cluster.
 * The *AnsibleAutomationPlatform* instance is deployed using the {OperatorPlatform}.
 
 .Procedure 
