--- a/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
@@ -11,7 +11,7 @@ Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  cre
 * EDARestore
 
 .Prerequisites
-* You must be authenticated with an Openshift cluster.
+* You must be authenticated with an OpenShift cluster.
 * You have installed the {OperatorPlatform} on the cluster.
 * The *AnsibleAutomationPlatformBackups* deployment is available in your cluster.
 
