--- a/downstream/modules/platform/proc-aap-controller-backup.adoc
+++ b/downstream/modules/platform/proc-aap-controller-backup.adoc
@@ -7,8 +7,8 @@ Use this procedure to back up a deployment of the controller, including jobs, in
 
 .Prerequisites
 
-* You must be authenticated with an Openshift cluster.
-* The {OperatorPlatform} has been installed to the cluster.
+* You must be authenticated with an OpenShift cluster.
+* You have installed the {OperatorPlatform} on the cluster.
 * The {ControllerName} is deployed to using the {OperatorPlatform}.
 
 .Procedure
@@ -21,8 +21,8 @@ Use this procedure to back up a deployment of the controller, including jobs, in
 . Enter the *Deployment name* of the deployed {PlatformNameShort} instance being backed up.
 For example, if your {ControllerName} must be backed up and the deployment name is `aap-controller`, enter 'aap-controller' in the *Deployment name* field.
 . If you want to use a custom, pre-created pvc:
-.. Optionally enter the name of the *Backup persistant volume claim*.
-.. Optionally enter the *Backup PVC storage requirements*, and *Backup PVC storage class*.
+.. [Optional]: enter the name of the *Backup persistent volume claim*.
+.. [Optional]: enter the *Backup PVC storage requirements*, and *Backup PVC storage class*.
 +
 [NOTE]
 ====
