--- a/downstream/modules/platform/proc-aap-hub-restore.adoc
+++ b/downstream/modules/platform/proc-aap-hub-restore.adoc
@@ -13,7 +13,7 @@ The name specified for the new AutomationHub custom resource must not match an e
 .Prerequisites
 
 * You must be authenticated with an OpenShift cluster.
-* You have deploed {HubName} on the cluster.
+* You have deployed {HubName} on the cluster.
 * An AutomationHubBackup is available on a PVC in your cluster.
 
 .Procedure
