AAP-27695 Add Ansible plug-in for RHDH Installation doc (#1634)

--- a/downstream/attributes/attributes.adoc
+++ b/downstream/attributes/attributes.adoc
@@ -112,6 +112,9 @@
 // Ansible developer tools
 :ToolsName: Ansible developer tools
 :Test: Ansible-test
+:AAPRHDH: Ansible plug-ins for Red Hat Developer Hub
+:RHDH: Red Hat Developer Hub
+:RHDHShort: RHDH
 :Builder: Ansible Builder
 :Navigator: automation content navigator
 :NavigatorStart: Automation content navigator
