--- a/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-backup.adoc
@@ -1,27 +1,21 @@
 [id="aap-platform-gateway-backup_{context}"]
 
-= Backing up your Ansible Automation Platform deployment
-Regularly backing up your *Ansible Automation Platform* deployment is vital to protect against unexpected data loss and application errors. *Ansible Automation Platform* hosts any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you back up *Ansible Automation Platform* the operator will also back up these components.
+= Backing up your {PlatformNameShort} deployment
+Regularly backing up your *{PlatformNameShort}* deployment is vital to protect against unexpected data loss and application errors. *{PlatformNameShort}* hosts any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you back up *{PlatformNameShort}* the operator will also back up these components.
 
 .Prerequisites
-<<<<<<< HEAD
-* You must be authenticated on OpenShift cluster.
-* You have installed the {OperatorPlatform} on the cluster.
-* The *AnsibleAutomationPlatform* instance is deployed using the {OperatorPlatform}.
-=======
 * You must be authenticated on Openshift cluster.
 * The {OperatorPlatform} has been installed on the cluster.
-* The *Ansible Automation Platform* instance is deployed using the {OperatorPlatform}.
->>>>>>> d1080e11 (Editorial review of entire doc ahead of 2.5 EA (#1628))
+* The *{PlatformNameShort}* instance is deployed using the {OperatorPlatform}.
 
 .Procedure 
 . Log in to {OCP}.
 . Go to menu:Operators[Installed Operators].
 . Select the {OperatorPlatform} installed on your project namespace.
 . Go to your *All Instances* tab, and click btn:[Create New].
-. Select *Ansible Automation Platform Backup* from the list.
+. Select *{PlatformNameShort} Backup* from the list.
 +
-NOTE: When creating the *Ansible Automation Platform Backup* resource it also creates backup resources for each of the nested components that are enabled.
+NOTE: When creating the *{PlatformNameShort} Backup* resource it also creates backup resources for each of the nested components that are enabled.
 +
 . In the *Name* field, enter a name for the backup.
 . In the *Deployment name* field, enter the name of the deployed {PlatformNameShort} instance being backed up. For example if your {PlatformNameShort} deployment must be backed up and the deployment name is aap, enter 'aap' in the *Deployment name* field.
