--- a/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
+++ b/downstream/modules/platform/proc-aap-platform-gateway-restore.adoc
@@ -1,7 +1,7 @@
 [id="aap-platform-gateway-restore_{context}"]
 
-= Recovering your Ansible Automation Platform deployment
-*Ansible Automation Platform* manages any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you recover *Ansible Automation Platform* you also restore these components.
+= Recovering your {PlatformNameShort} deployment
+*{PlatformNameShort}* manages any enabled components (such as, {ControllerName}, {HubName}, and {EDAName}), when you recover *{PlatformNameShort}* you also restore these components.
 
 In previous versions of the {OperatorPlatform}, it was necessary to create a restore object for each component of the platform. 
 Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  creates and manages the other restore objects: 
@@ -20,9 +20,9 @@ Now, you create a single *AnsibleAutomationPlatformRestore* resource, which  cre
 . Go to menu:Operators[Installed Operators].
 . Select the {OperatorPlatform} installed on your project namespace.
 . Go to your *All Instances* tab, and click btn:[Create New].
-. Select *Ansible Automation Platform Restore* from the list.
+. Select *{PlatformNameShort} Restore* from the list.
 . For *Name* enter the name for the recovery deployment. 
-. For *New Ansible Automation Platform Name* enter the new name for your {PlatformNameShort} instance. 
+. For *New {PlatformNameShort} Name* enter the new name for your {PlatformNameShort} instance. 
 . *Backup Source* defaults to *CR*.
 . For *Backup name* enter the name your chose when creating the backup. 
 . Click btn:[Create].
