--- a/downstream/modules/platform/proc-operator-deploy-central-config.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-central-config.adoc
@@ -1,7 +1,7 @@
 [id="operator-deploy-central-config_{context}"]
 
 = Deploying the platform gateway with existing {PlatformNameShort} components
-You can link any components of the {PlatformNameShort}, that you have already installed to a new *Ansible Automation Platform* instance. 
+You can link any components of the {PlatformNameShort}, that you have already installed to a new *{PlatformNameShort}* instance. 
 
 The following procedure simulates a scenario where you have {ControllerName} as an existing component and want to add {HubName} and {EDAName}. 
 
@@ -9,8 +9,8 @@ The following procedure simulates a scenario where you have {ControllerName} as 
 . Log in to {OCP}.
 . Go to to menu:Operators[Installed Operators].
 . Click btn:[Subscriptions] and edit your *Update channel* to *stable-2.5*.
-. Click btn:[Details] and on the *Ansible Automation Platform* tile click btn:[Create instance].
-. From the *Create Ansible Automation Platform* page enter a name for your instance in the *Name* field.
+. Click btn:[Details] and on the *{PlatformNameShort}* tile click btn:[Create instance].
+. From the *Create {PlatformNameShort}* page enter a name for your instance in the *Name* field.
 . Click btn:[YAML view] and copy in the following:
 +
 ----
@@ -49,7 +49,7 @@ The following procedure simulates a scenario where you have {ControllerName} as 
 . Click btn:[Create].
 . To access your new instance, see <<Accessing the platform gateway>>.
 
-NOTE: If you have an existing controller with a managed Postgres pod, after creating the *Ansible Automation Platform* resource your {ControllerName} instance will continue to use that original Postgres pod. If you were to do a fresh install you would have a single Postgres managed pod for all instances. 
+NOTE: If you have an existing controller with a managed Postgres pod, after creating the *{PlatformNameShort}* resource your {ControllerName} instance will continue to use that original Postgres pod. If you were to do a fresh install you would have a single Postgres managed pod for all instances. 
 
 
 
