--- a/downstream/modules/platform/proc-operator-access-aap.adoc
+++ b/downstream/modules/platform/proc-operator-access-aap.adoc
@@ -1,19 +1,15 @@
 [id="operator-access-aap_{context}"]
 
 = Accessing the platform gateway  
-You should use the *Ansible Automation Platform* instance as your default. 
+You should use the *{PlatformNameShort}* instance as your default. 
 This instance links the {ControllerName}, {HubName}, and {EDAName} deployments to a single interface. 
 
 .Procedure
 
-To access your *Ansible Automation Platform* instance:
+To access your *{PlatformNameShort}* instance:
 
 . Navigate to menu:Networking[Routes]
-<<<<<<< HEAD
-. Click the link under *Location* for *AnsibleAutomationPlatform*.
-=======
-. Click the link under *Location* for *Ansible Automation Platform*.
->>>>>>> d1080e11 (Editorial review of entire doc ahead of 2.5 EA (#1628))
+. Click the link under *Location* for *{PlatformNameShort}*.
 . This redirects you to the {PlatformNameShort} login page. Enter "admin" as your username in the *Username* field.
 . For the password you need to:
 .. Go to to menu:Workloads[Secrets].
