updating UI change (#1632)
* Editorial review of entire doc ahead of 2.5 EA (#1628)

* PR suggestions

--- a/downstream/modules/platform/proc-operator-access-aap.adoc
+++ b/downstream/modules/platform/proc-operator-access-aap.adoc
@@ -1,15 +1,15 @@
 [id="operator-access-aap_{context}"]
 
 = Accessing the platform gateway  
-You should use the *AnsibleAutomationPlatform* instance as your default. 
+You should use the *{PlatformNameShort}* instance as your default. 
 This instance links the {ControllerName}, {HubName}, and {EDAName} deployments to a single interface. 
 
 .Procedure
 
-To access your *AnsibleAutomationPlatform* instance:
+To access your *{PlatformNameShort}* instance:
 
 . Navigate to menu:Networking[Routes]
-. Click the link under *Location* for *AnsibleAutomationPlatform*.
+. Click the link under *Location* for *{PlatformNameShort}*.
 . This redirects you to the {PlatformNameShort} login page. Enter "admin" as your username in the *Username* field.
 . For the password you need to:
 .. Go to to menu:Workloads[Secrets].
