--- a/downstream/modules/platform/proc-operator-link-components.adoc
+++ b/downstream/modules/platform/proc-operator-link-components.adoc
@@ -2,13 +2,13 @@
 
 = Linking your components to the platform gateway  
 
-After installing the {OperatorPlatform} in your namespace you can set up your *AnsibleAutomationPlatform* instance.
+After installing the {OperatorPlatform} in your namespace you can set up your *{PlatformNameShort}* instance.
 Then link all the platform components to a single user interface. 
 
 .Procedure 
 . Go to your {OperatorPlatform} and click btn:[Details]. 
-. On the *AnsibleAutomationPlatform* tile click btn:[Create instance].
-. From the *Create AnsibleAutomationPlatform* page enter a name for your instance in the *Name* field.
+. On the *{PlatformNameShort}* tile click btn:[Create instance].
+. From the *Create {PlatformNameShort}* page enter a name for your instance in the *Name* field.
 . Click btn:[YAML view] and paste the following:
 +
 ----
@@ -30,6 +30,6 @@ spec:
 
 .Verification
 Go to your {OperatorPlatform} deployment and click btn:[All instances] to verify if all instances deployed correctly.
-You should see the *AnsibleAutomationPlatform* instance and the deployed *AutomationController*, *EDA*, and *AutomationHub* instances here.
+You should see the *{PlatformNameShort}* instance and the deployed *AutomationController*, *EDA*, and *AutomationHub* instances here.
 
 Alternatively you can check by the command line, run: `oc get route` 
