Updating module on creating an inventory
Corrections

Correct section on creating host filters

https://issues.redhat.com/browse/AAP-27447

--- a/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
+++ b/downstream/modules/platform/proc-controller-adding-new-inventory.adoc
@@ -34,7 +34,7 @@ Therefore, to populate the *Smart Host Filter* field, specify a tag that contain
 +
 Filters are case-sensitive.
 * *Instance Groups*: Select the instance group or groups for this inventory to run on.
-
++
 You can select multiple instance groups and sort them in the order that you want them run.
 +
 //image:select-instance-groups-modal.png[image]
@@ -45,6 +45,7 @@ You can select multiple instance groups and sort them in the order that you want
 Empty groups from input inventories are copied into the constructed inventory.
 * Optional:(Only applicable to constructed inventories): *Cached timeout (seconds)*: Set the length of time you want the cache plugin data to timeout.
 * Only applicable to constructed inventories: *Verbosity*: Control the level of output that Ansible produces as the playbook executes related to inventory sources associated with constructed inventories.
++
 Select the verbosity from:
 
 * *Normal*
@@ -62,7 +63,7 @@ Select the verbosity from:
 //Not sure of this. 
 ** *WinRM Debug* used for verbosity specific to windows remote management 
 +
-Click the image:arrow.png[Expand,15,15] icon for information on *How to use the constructed inventory plugin*
+Click the image:arrow.png[Expand,15,15] icon for information on *How to use the constructed inventory plugin*.
 * Only applicable to constructed inventories: *Limit*: Restricts the number of returned hosts for the inventory source associated with the constructed inventory.
 You can paste a group name into the limit field to only include hosts in that group.
 For more information, see the *Source vars* setting.
