AAP-19236 - Minor fixes and adding a snippet

--- a/downstream/modules/platform/proc-gw-add-team-organization.adoc
+++ b/downstream/modules/platform/proc-gw-add-team-organization.adoc
@@ -1,9 +1,11 @@
+:_mod-docs-content-type: PROCEDURE
+
 [id="proc-gw-add-team-organization_{context}"]
 
 = Adding a team to an organization
 
-You can provide team access to an organization by adding roles to the team. To add roles to a team, the team must already exist in the organization. For more information, see [TBD - Create a team].
-To add roles for a team, the role must already exist. See [TBD - Automation execution roles and Automation decision roles] for more information about creating new roles.
+You can provide team access to an organization by adding roles to the team. To add roles to a team, the team must already exist in the organization. For more information, see xref:proc-controller-creating-a-team[Creating a team].
+To add roles for a team, the role must already exist. See xref:proc-gw-roles_auto-exec[Automation execution roles] and xref:proc-gw-roles_auto-dec[Automation decision roles] for more information about creating new roles.
 
 .Procedure
 
@@ -13,10 +15,7 @@ To add roles for a team, the role must already exist. See [TBD - Automation exec
 . Click btn:[Add roles].
 . Select the roles you want the selected team to have. Scroll down for a complete list of roles.
 +
-[NOTE]
-====
-If you have multiple {PlatformNameShort} components installed, you will see selections for the roles associated with each component. For example, Automation Execution for {ControllerName} roles and Automation Decisions for {EDAName} roles.
-====
+include::snippets/snip-gw-roles-note-multiple-components.adoc
 +
 . Click btn:[Next] to review the roles settings.
 . Click btn:[Finish] to apply the roles to the selected teams. The Add roles dialog displays the updated roles assigned for each team.
