--- a/downstream/modules/platform/proc-gw-user-access-resources.adoc
+++ b/downstream/modules/platform/proc-gw-user-access-resources.adoc
@@ -1,3 +1,5 @@
+:_mod-docs-content-type: PROCEDURE
+
 [id="proc-gw-user-access-resources_{context}"]
 
 = Providing user access to a resource
@@ -10,5 +12,5 @@ You can grant users access to resources through the roles to which they are assi
 . Select the *User access* tab.
 . Click the checkbox beside the user to assign that user to your chosen type of resource and click btn:[Next].
 . Select the roles you want applied to the user for the chosen resource and click btn:[Next].
-. Review the settings and click btn:[Save}. A progress bar displays indicating whether the role assignments were successfully applied.
+. Review the settings and click btn:[Save]. A progress bar displays indicating whether the role assignments were successfully applied.
 . You can remove resource access for a user by selecting the - icon next to the user. This launches a confirmation dialog, asking you to confirm the removal.
