--- a/downstream/modules/platform/proc-gw-add-admin-team.adoc
+++ b/downstream/modules/platform/proc-gw-add-admin-team.adoc
@@ -5,7 +5,7 @@
 = Adding administrators to a team
 
 You can add administrators to a team which allows them to manage the membership and settings of that team. For example, they can create new users and grant permission to users within the team.
-To add an administrator to a team, the administrator must already have been created. For more information, see (TBD - Create a user).
+To add an administrator to a team, the administrator must already have been created. For more information, see xref:proc-controller-creating-a-user[Creating a user].
 
 .Procedure
 
