--- a/downstream/modules/platform/proc-gw-remove-roles-user.adoc
+++ b/downstream/modules/platform/proc-gw-remove-roles-user.adoc
@@ -1,18 +1,17 @@
+:_mod-docs-content-type: PROCEDURE
+
 [id="proc-gw-remove-roles-user_{context}"]
 
 = Removing roles from a user
-You can remove roles from a user by selecting the - icon next to the resource. This launches a confirmation dialog, asking you to confirm the removal.
+You can remove roles from a user by selecting the *-* icon next to the resource. This launches a confirmation dialog, asking you to confirm the removal.
 
 .Procedure
 
-. From the navigation panel, select Access Management › Users.
+. From the navigation panel, select {MenuAMUsers}.
 . Select the user Name from which you want to remove roles.
-. Select the Roles tab.
+. Select the *Roles* tab.
 +
-[NOTE]
-====
-If you have multiple {PlatformNameShort} components installed, you will see selections for the roles associated with each component in the *Roles* menu bar. For example, Automation Execution for {ControllerName} roles and Automation Decisions for {EDAName} roles.
-====
+include::snippets/snip-gw-roles-note-multiple-components.adoc
 +
 . Select the checkbox next to each resource you want to remove and click *Remove selected roles* from the {MoreActionsIcon} list on the menu bar.
 . Select the checkbox to confirm removal of the selected roles and click btn:[Remove role].
