--- a/downstream/modules/platform/proc-control-data-collection.adoc
+++ b/downstream/modules/platform/proc-control-data-collection.adoc
@@ -3,15 +3,12 @@
 = Controlling data collection from {ControllerName}
 
 [role="_abstract"]
-You can control how {ControllerName} collects data by setting your participation level in the *User Interface* tab in the *Settings* menu.
+You can control how {ControllerName} collects data from the {MenuSetSystem} menu.
 
 .Procedure
 
 . Log in to your {ControllerName}.
-//[ddacosta]I don't see an equivalent in 2.5, need to verify where it gets added
-. Navigate to {MenuAEAdminSettings} and select *User Interface settings* from the *User Interface* option.
-. Select the desired level of data collection from the *User Analytics Tracking State* drop-down list:
-** *Off*: Prevents any data collection.
-** *Anonymous*: Enables data collection without your specific user data.
-** *Detailed*: Enables data collection including your specific user data.
-. Click btn:[Save] to apply the settings or btn:[Cancel] to discard the changes.
+. From the navigation panel, select {MenuSetSystem}.
+. Select *Gather data for Automation Analytics* to enable {ControllerName} to gather data on automation and send it to Automation Analytics.
+
+ 
