AAP-22930 Updates to the Projects chapter in the EDA controller user guide

--- a/downstream/modules/eda/proc-eda-delete-project.adoc
+++ b/downstream/modules/eda/proc-eda-delete-project.adoc
@@ -2,8 +2,12 @@
 
 = Deleting a project
 
+If you need to delete a project, the Event-Driven Ansible controller interface provides multiple options.
+
 .Procedure
-. From the *Projects* list view, select the btn:[More Actions] icon *{MoreActionsIcon}* next to the desired project.
+. To delete a project, do one of the following: 
+* From the *Projects* list view, click the checkbox next to the desired project, and select the btn:[More Actions] icon *{MoreActionsIcon}* from the page menu.
+* From the *Projects* list view, select the btn:[More Actions] icon *{MoreActionsIcon}* next to the desired project.
 . Select btn:[Delete project].
-. In the popup window, select btn:[Yes, I confirm that I want to delete this project].
+. In the *Permanently delete projects* window, select btn:[Yes, I confirm that I want to delete this project].
 . Select btn:[Delete project].
