AAP-22930 Updates to the Projects chapter in the EDA controller user guide

--- a/downstream/modules/eda/proc-eda-set-up-new-project.adoc
+++ b/downstream/modules/eda/proc-eda-set-up-new-project.adoc
@@ -2,7 +2,7 @@
 
 = Setting up a new project
 
-
+You can set up projects to manage and store your rulebooks in {EDAcontroller}. 
 
 .Prerequisites
 // [ddacosta] I'm not sure whether there will be an EDA specific dashboard in the gateway. Step 1 might need to change to something like "Log in to AAP".
@@ -38,6 +38,7 @@ Options:: The Verify SSL option is enabled by default. Enabling this option veri
 [NOTE]
 ====
 You can disable this option if you have a local repository that uses self-signed certificates.
+====
 . Select btn:[Create project].
 
 Your project is now created and can be managed in the *Projects* page.
