Amended note on facts and host filters
Updated text

Add link to information on host filters

https://issues.redhat.com/browse/AAP-27638

--- a/downstream/modules/platform/proc-controller-define-filter-with-facts.adoc
+++ b/downstream/modules/platform/proc-controller-define-filter-with-facts.adoc
@@ -29,7 +29,7 @@ image:inventories-smart-define-host-filter-facts.png[image]
 +
 The search criteria for the specified ansible fact is displayed.
 +
-To filter by the regex variable, see the KCS article, link:https://access.redhat.com/solutions/6994808[How to filter hosts not having a particular variable name using regex when creating Smart Inventory].
+To filter by the regex variable, see the `ansible.builtin.regex_search filter` documentation, and the KCS article, link:https://access.redhat.com/solutions/6994808[How to filter hosts not having a particular variable name using regex when creating Smart Inventory].
 
 //image:inventories-smart-define-host-filter-facts2.png[image]
 
