AAP-19236 - Add assemblies for Access Management and peer review changes from the modules PR

--- a/downstream/modules/platform/proc-gw-organizations-exec-env.adoc
+++ b/downstream/modules/platform/proc-gw-organizations-exec-env.adoc
@@ -2,9 +2,9 @@
 
 [id="proc-gw-organizations-exec-env_{context}"]
 
-= Working with execution environments
+= Working with {ExecEnvShort}s
 
-When automation controller is enabled on the platform, you can review any execution environments you have set up and manage their settings within the organization resource.
+When {ControllerName} is enabled on the platform, you can review any {ExecEnvShort}s you have set up and manage their settings within the organization resource.
 
 For more information about execution environments, see link:{BaseURL}/{PlatformVers}/html/using_automation_execution/index#assembly-controller-execution-environments[Execution environments] in _Using automation execution_ guide.
 
@@ -12,14 +12,14 @@ For more information about execution environments, see link:{BaseURL}/{PlatformV
 .Procedure
 
 . From the navigation panel, select {MenuAMOrganizations}.
-. From the Organizations list view, select the organization to which you want to manage execution environments.
+. From the Organizations list view, select the organization to which you want to manage {ExecEnvShort}s.
 . Select the *Execution Environments* tab.
-. If no execution environments are available, click btn:[Create execution environment] to create one. Alternatively, you can create an execution environment from the navigation panel by selecting {MenuInfrastructureExecEnvironments}.
-. Click btn:[Create execution environment].
+. If no {ExecEnvShort}s are available, click btn:[Create execution environment] to create one. Alternatively, you can create an {ExecEnvShort} from the navigation panel by selecting {MenuInfrastructureExecEnvironments}.
+. Click btn:[Create {ExecEnvShort}].
 +
 [NOTE]
 ====
-After creating a new execution environment, return to Access Management > Organizations and select the organization in which you created the execution environment to update the list on that tab.
+After creating a new {ExecEnvShort}s, return to {MenuAMOrganizations} and select the organization in which you created the {ExecEnvShort} to update the list on that tab.
 ====
 +
-. Select the execution environments to use with your particular organization.
+. Select the {ExecEnvShort}s to use with your particular organization.
