--- a/downstream/assemblies/platform/assembly-controller-teams.adoc
+++ b/downstream/assemblies/platform/assembly-controller-teams.adoc
@@ -1,24 +1,31 @@
 ifdef::context[:parent-context: {context}]
 
-[id="assembly-controller-teams"]
+:_mod-docs-content-type: ASSEMBLY
+
+[id="assembly-controller-teams_{context}"]
+
+= Teams
 
 :context: controller-teams
-= Managing teams
 
-A *Team* is a subdivision of an organization with associated users, projects, credentials, and permissions.
-Teams offer a means to implement role-based access control schemes and delegate responsibilities across organizations.
-For example, you can grant permissions to a whole team rather than to each user on the team.
+A team is a subdivision of an organization with associated users, and resources. Teams provide a means to implement role-based access control schemes and delegate responsibilities across organizations. For instance, you can grant permissions to a Team rather than each user on the team.
+You can create as many teams as needed for your organization. Teams can only be assigned to one organization while an organization can be made up of multiple teams. Each team can be assigned roles, the same way roles are assigned for users. Teams can also scalably assign ownership for credentials, preventing multiple interface click-throughs to assign the same credentials to the same user.
 
-From the navigation panel, select {MenuControllerTeams}.
+include::proc-controller-creating-a-team.adoc[leveloffset=+1]
 
-image:organizations-teams-list.png[Teams list]
+include::proc-gw-team-list-view.adoc[leveloffset=+1]
 
-You can sort and search the team list and searched by *Name* or *Organization*.
+include::proc-gw-team-add-user.adoc[leveloffset=+1]
 
-Click the Edit image:leftpencil.png[Edit,15,15] icon next to the entry to edit information about the team.
-You can also review *Users* and *Permissions* associated with this team.
+include::proc-gw-team-remove-user.adoc[leveloffset=+1]
 
-include::platform/proc-controller-creating-a-team.adoc[leveloffset=+1]
+include::proc-gw-add-admin-team.adoc[leveloffset=+1]
+
+include::proc-controller-user-permissions.adoc[leveloffset=+1]
+
+include::proc-gw-remove-roles-team.adoc[leveloffset=+1]
+
+include::proc-gw-delete-team.adoc[leveloffset=+1]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
