--- a/downstream/assemblies/platform/assembly-controller-users.adoc
+++ b/downstream/assemblies/platform/assembly-controller-users.adoc
@@ -1,19 +1,31 @@
-[id="assembly-controller-users"]
+ifdef::context[:parent-context: {context}]
 
-ifdef::controller-GS[]
-= User roles in {ControllerName}
-endif::controller-GS[]
-ifdef::controller-UG[]
-= Managing Users in {ControllerName}
-endif::controller-UG[]
+[id="assembly-controller-users_{context}"]
+= Users
 
-include::platform/con-controller-create-users.adoc[leveloffset=+1]
-ifdef::controller-UG[]
-include::platform/proc-controller-creating-a-user.adoc[leveloffset=+1]
-include::platform/proc-controller-deleting-a-user.adoc[leveloffset=+1]
-include::platform/ref-controller-user-organizations.adoc[leveloffset=+1]
-include::platform/ref-controller-user-teams.adoc[leveloffset=+1]
-include::platform/ref-controller-user-roles.adoc[leveloffset=+1]
-include::platform/proc-controller-user-permissions.adoc[leveloffset=+2]
-include::platform/proc-controller-user-tokens.adoc[leveloffset=+1]
-endif::controller-UG[]
+:context: access-mgmt-users
+
+Users associated with an organization are shown in the *Users* tab of the organization.
+
+You can add other users to an organization, including a normal user or system administrator, but first, you must create them.
+
+[NOTE] 
+====
+{PlatformNameShort} automatically creates a default admin user so they can log in and set up {PlatformNameShort} for their organization. This user can not be deleted or modified. 
+
+====
+You can sort or search the User list by *Username*, *First name*, *Last name*, or *Email*. Click the arrows in the header to toggle your sorting preference.
+You can view *User type* and *Email* beside the user name on the Users page.
+
+include::proc-gw-users-list-view.adoc[leveloffset=+1]
+
+include::proc-controller-creating-a-user.adoc[leveloffset=+1]
+
+include::proc-controller-deleting-a-user.adoc[leveloffset=+1]
+
+include::ref-controller-user-roles.adoc[leveloffset=+1]
+
+include::proc-gw-remove-roles-user.adoc[leveloffset=+1]
+
+ifdef::parent-context[:context: {parent-context}]
+ifndef::parent-context[:!context:]
