AAP-19236 - Implemented peer review changes

--- a/downstream/modules/platform/proc-gw-organizations-exec-env.adoc
+++ b/downstream/modules/platform/proc-gw-organizations-exec-env.adoc
@@ -12,7 +12,7 @@ For more information about execution environments, see link:{BaseURL}/{PlatformV
 .Procedure
 
 . From the navigation panel, select {MenuAMOrganizations}.
-. From the Organizations list view, select the organization to which you want to manage {ExecEnvShort}s.
+. From the Organizations list view, select the organization whose {ExecEnvShort}s you want to manage.
 . Select the *Execution Environments* tab.
 . If no {ExecEnvShort}s are available, click btn:[Create execution environment] to create one. Alternatively, you can create an {ExecEnvShort} from the navigation panel by selecting {MenuInfrastructureExecEnvironments}.
 . Click btn:[Create {ExecEnvShort}].
